* [SRN-85] NTripleQueryParser: Allow boolean operator within URI pattern
* [SRN-94] Field query can be disabled in the KeywordQParser
* [SRN-100] Improve user-readable version of the query
* [SRN-102] Catch SolrException in SIREnQParser#parse
* [SRN-105] Upgrade to Lucene/Solr 3.1
* [GH-1] Pom fixes
* [GH-4] siren-core - Query Processing Optimisation - Load tuples lazily
* [GH-5] siren-core - Query Processing Optimisation - SirenCellScorer iterates
         over cell ids that are outside constraint boundaries
* [GH-6] siren-core - delta encoding

New Features

* [SRN-78] Add Solr configuration example
* [SRN-96] Add filter to expand accented words with non-accented form
* [SRN-99] Boolean query group support in cell query
* [SRN-101] Boost support in literal and uri patterns
* [SRN-104] Create an OptimizeSchedulerListerner

Tasks

* [SRN-8] Create parser for simple queries
* [SRN-72] Separate query parser and solr plugin
* [SRN-74] Create a siren-solr module
* [SRN-89] Clean Solr home and related files
* [SRN-110] Remove scoreCell function

======================= Release 0.2.0 2010-07-26 =======================

Bug Fixes

* [SRN-61] SirenTupleQuery#getClause() returns a SirenCellClause array
* [SRN-64] Lucene interface enforces #incrementToken method to be final

Improvements

* [SRN-69] Make URINormalisation configurable in TupleAnalyzer
* [SRN-70] Use packed integers for encoding payload data
* [SRN-71] Add bnode filtering in analyzers

======================= Release 0.2 RC6 2010-07-07 =======================

Bug Fixes

* [SRN-65] SirenPhraseQuery documentation refers to QueryParser
* [SRN-67] SirenPayload is storing position information that is not used

Improvements

* [SRN-66] Make URINormalisationFilter less aggressive
* [SRN-68] Upgrade to Lucene 3.0.2

======================= Release 0.2 RC5 2010-04-14 =======================

Bug Fixes

* [SRN-57] SirenConjunctionScorer and SirenCellConjunctionScorer give a very